<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.pulsebeat02</groupId>
    <artifactId>MinecraftMediaLibrary-Parent</artifactId>
    <packaging>pom</packaging>
    <version>RELEASE-1.0.0</version>
    <modules>
        <module>MinecraftMediaLibrary</module>
        <module>v1_16_R1</module>
        <module>v1_16_R2</module>
        <module>v1_16_R3</module>
        <module>DeluxeMediaPlugin</module>
    </modules>
    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <dir>${project.build.directory}</dir>
    </properties>
</project>